# todo-app

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  app.js  backend.Dockerfile  docker-compose.yml  env.example  frontend.Dockerfile  index.html  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.txt  style.css
app/: __init__.py  base.py  config.py  database.py  main.py
app/alembic/: env.py  script.py.mako
app/api/: __init__.py
app/core/: __init__.py  crud.py  deps.py  security.py
app/database/: __init__.py  auth_repo.py  notes_repo.py
app/models/: __init__.py  note.py  tag.py  user.py
app/schemas/: __init__.py  note.py  tag.py  token.py  user.py
backend/: .env  .env.example  .sequelizerc  Dockerfile  create-db.js  entrypoint.sh  index.js  package-lock.json  package.json  server.js
backend/config/: auth.config.js  config.js  config.json
backend/controllers/: auth.controller.js  authController.js  category.controller.js  categoryController.js  categoryRoutes.js  index.js  task.controller.js  taskController.js  taskRoutes.js  userRoutes.js
backend/middleware/: auth.js  authJwt.js  authMiddleware.js  csrfMiddleware.js  errorHandler.js  index.js  taskValidation.js  (+1 more)
client/: .dockerignore  Dockerfile  index.css  index.html  package-lock.json  package.json  tsconfig.json
frontend/: .dockerignore  Dockerfile  nginx.conf  package-lock.json  package.json
server/: package-lock.json  package.json  server.js
tests/: __init__.py  conftest.py  test_auth.py  test_notes.py  test_tags.py
(+99 files in other folders)
